# brs-algo

./: LICENSE  README.md  pyproject.toml
brs_algo/learning/data/: __init__.py  collate.py  data_module.py  dataset.py
brs_algo/learning/module/: __init__.py  base.py  diffusion_module.py
brs_algo/learning/nn/common/: __init__.py  mlp.py
brs_algo/learning/nn/diffusion/: __init__.py  diffusion_head.py  unet.py
brs_algo/learning/nn/features/: __init__.py  fusion.py  pointnet.py
brs_algo/learning/nn/gpt/: gpt.py
brs_algo/learning/policy/: __init__.py  base.py  wbvima_policy.py
brs_algo/lightning/: lightning.py  trainer.py
brs_algo/optim/: __init__.py  lr_schedule.py  optimizer_group.py
brs_algo/rollout/: asynced_rollout.py  synced_rollout.py
brs_algo/utils/: __init__.py  array_tensor_utils.py  config_utils.py  convert_utils.py  file_utils.py  functional_utils.py  misc_utils.py  print_utils.py  random_seed.py  shape_utils.py  termcolor.py  torch_utils.py  tree_utils.py
main/rollout/clean_house_after_a_wild_party/: common.py  rollout_async.py  rollout_sync.py
main/rollout/clean_the_toilet/: common.py
main/rollout/lay_clothes_out/: common.py
main/rollout/put_items_onto_shelves/: common.py  rollout_async.py
main/rollout/take_trash_outside/: common.py  rollout_sync.py
main/train/: train.py
main/train/cfg/: cfg.yaml
main/train/cfg/arch/: wbvima.yaml
main/train/cfg/task/: clean_house_after_a_wild_party.yaml  clean_the_toilet.yaml  lay_clothes_out.yaml  put_items_onto_shelves.yaml  (+1 more)
scripts/: merge_data_files.py  post_process.py
